Include with params to related item context #51

--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -86,7 +86,6 @@
 
      <!-- Related items section-->
 
-     {% include "includes/related_items.html" with related_items=related_products %}
+     {% include "includes/related_items.html" with related_items=related_products item="prod" %}
   
-
 {% endblock %}
