--- a/programs/templates/programs/program_detail.html
+++ b/programs/templates/programs/program_detail.html
@@ -185,8 +185,7 @@
     {% endif %}
 
    <!-- Related Item Section -->
-    {% include "includes/related_items.html" with related_items=related_programs %}
-
+   {% include "includes/related_items.html" with related_items=related_programs item="prog" %}
 
 
 {% endblock %}
