Fixed enrollment program button state based on user/cart/purchased

--- a/programs/templates/programs/program_detail.html
+++ b/programs/templates/programs/program_detail.html
@@ -78,51 +78,60 @@
         <hr>
           <p class="lead">{{program.description}}</p>
 
+
+          <!-- Check if user is enrolled, senior dev or in cart and render button based on state-->
+
           {% if request.user.is_authenticated %}
 
-        {% if in_cart %}
-        <form
-          class="form"
-          action="{% url 'remove_from_cart' program.id %}"
-          method="POST"
-        >
-          {% csrf_token %}
-          <div class="d-flex mb-3">
-            <button type="submit" class="btn btn-danger flex-shrink-0">
-              <i class="fa-solid fa-trash"></i> Remove from Cart
-            </button>
-            <input
-              type="hidden"
-              name="redirect_url"
-              value="{{ request.path }}"
-            />
-          </div>
-        </form>
-        {% else %}
-        <form
-          class="form"
-          action="{% url 'add_to_cart' program.id %}"
-          method="POST"
-        >
-          {% csrf_token %}
-          <div class="d-flex mb-3">
-            <button type="submit" class="btn btn-primary flex-shrink-0">
-              <i class="fa-solid fa-school"></i> Add to Cart
-            </button>
-            <input type="hidden" name="item_type" value="program" />
-            <input
-              type="hidden"
-              name="redirect_url"
-              value="{{ request.path }}"
-            />
-          </div>
-        </form>
-        {% endif %}
-
-        {% else %}
-        <a href="{% url 'account_login' %}" class="btn btn-outline-primary">Login to Enroll</a>
-        {% endif %}
-
+          {% if purchased %}
+          {% endif %}
+          
+  
+          {% if purchased %}
+          <button class="btn btn-secondary" disabled>Enrolled!</button>
+          {% elif in_cart %}
+          <form
+            class="form"
+            action="{% url 'remove_from_cart' program.id %}"
+            method="POST"
+          >
+            {% csrf_token %}
+            <div class="d-flex mb-3">
+              <button type="submit" class="btn btn-danger flex-shrink-0">
+                <i class="fa-solid fa-trash"></i> Remove from Cart
+              </button>
+              <input
+                type="hidden"
+                name="redirect_url"
+                value="{{ request.path }}"
+              />
+            </div>
+          </form>
+          {% else %}
+          <form
+            class="form"
+            action="{% url 'add_to_cart' program.id %}"
+            method="POST"
+          >
+            {% csrf_token %}
+            <div class="d-flex mb-3">
+              <button type="submit" class="btn btn-primary flex-shrink-0">
+                <i class="fa-solid fa-school"></i> Add to Cart
+              </button>
+              <input type="hidden" name="item_type" value="program" />
+              <input
+                type="hidden"
+                name="redirect_url"
+                value="{{ request.path }}"
+              />
+            </div>
+          </form>
+          {% endif %}
+  
+  
+          {% else %}
+          <a href="{% url 'account_login' %}" class="btn btn-outline-primary">Login to Enroll</a>
+          {% endif %}
           <hr>
 
         </div>
