Include rating array method on program model

--- a/products/templates/includes/product_card.html
+++ b/products/templates/includes/product_card.html
@@ -21,8 +21,8 @@
           >
 
           {% for i in product.rating_array %}
-          <div class="bi-star-fill"></div>
-        {% endfor %}
+          <i class="fa-solid fa-star text-warning"></i>
+          {% endfor %}
 
           </div>
           <!-- Product price-->
