Min/max values added to cart item input field #52

--- a/cart/templates/includes/cart_item.html
+++ b/cart/templates/includes/cart_item.html
@@ -61,6 +61,8 @@
         name='quantity'
         class="form-control text-center"
         value="{{item.quantity}}"
+        min="0"
+        max="99"
       />
       <button type='submit' class="cart-button text-primary">
         Update
