--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -68,8 +68,7 @@
               </div>
               <h2 class="h5">Clothing</h2>
               <p class="mb-0">
-                Paragraph of text beneath the heading to explain the
-                heading. Here is just a bit more text.
+                Elevate your style with our trendy and versatile collection.
               </p>
             </div>
             <div class="col mb-5 h-100">
@@ -80,8 +79,7 @@
               </div>
               <h2 class="h5">Miscellaneous</h2>
               <p class="mb-0">
-                Paragraph of text beneath the heading to explain the
-                heading. Here is just a bit more text.
+                Discover unique and innovative products that enhance your everyday life.
               </p>
             </div>
             <div class="col mb-5 mb-md-0 h-100">
@@ -92,8 +90,7 @@
               </div>
               <h2 class="h5">Stationary</h2>
               <p class="mb-0">
-                Paragraph of text beneath the heading to explain the
-                heading. Here is just a bit more text.
+                Stay organized and inspired with our chic and functional stationery essentials.
               </p>
             </div>
             <div class="col h-100">
@@ -104,8 +101,7 @@
               </div>
               <h2 class="h5">Courses</h2>
               <p class="mb-0">
-                Paragraph of text beneath the heading to explain the
-                heading. Here is just a bit more text.
+                Unlock your potential and learn new skills with our comprehensive online courses.
               </p>
             </div>
           </div>
@@ -120,21 +116,21 @@
         <div class="row">
           <div class="col-lg-3 col-md-6 col-sm-6">
             <div class="text-center p-3 card">
-              <i class="fa-solid fa-truck h1"></i>
+              <i class="fa-solid fa-truck h1 text-primary"></i>
               <h6>Free Delivery / Admin Charges</h6>
               <p>On all member orders</p>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 col-sm-6">
             <div class="text-center p-3 card">
-              <i class="fa-solid fa-rotate-left h1"></i>
+              <i class="fa-solid fa-rotate-left h1 text-danger"></i>
               <h6>Return Policy</h6>
               <p>Free Shipping on all order</p>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 col-sm-6">
             <div class="text-center p-3 card">
-              <i class="fa-solid fa-headset h1"></i>
+              <i class="fa-solid fa-headset h1 text-success"></i>
               <h6>24/7 Support</h6>
               <p>Free Shipping on all order</p>
             </div>
