--- a/products/templates/includes/product_card.html
+++ b/products/templates/includes/product_card.html
@@ -8,7 +8,7 @@
       {% endif %}
       <!-- Product image-->
       
-      <img class="card-img-top" src="{{ product.image.url }}" alt="{{ product.name }}"/>
+      <img class="card-img-top" src="{{ product.image.url }}" alt="{{ product.name }}">
 
       <!-- Product details-->
       <div class="card-body p-2">
