--- a/cart/templates/includes/cart_item.html
+++ b/cart/templates/includes/cart_item.html
@@ -12,14 +12,14 @@
           alt="product image"
           class="img-fluid d-none d-md-block rounded mb-2 border border-black-50"
           style="height: 100px;  width: 100px; object-fit: cover;"
-        />
+        >
         {% else %}
         <img
         src="{% static 'images/award-placeholder.webp' %}"
         alt="product image"
         class="img-fluid d-none d-md-block rounded mb-2 bg-{{item.product.color}} border border-black-50"
         style="height: 100px;   width: 100px; object-fit: cover;"
-      />
+      >
         {% endif %}
        
         </div>
@@ -63,11 +63,11 @@
         value="{{item.quantity}}"
         min="0"
         max="99"
-      />
+      >
       <button type='submit' class="cart-button text-primary">
         Update
       </button>
-      <input type="hidden" name="redirect_url" value="{{ request.path }}" />
+      <input type="hidden" name="redirect_url" value="{{ request.path }}" >
     </form>
       {% endif %}
         <form
@@ -86,7 +86,7 @@
           >
           Remove
           </button>
-          <input type="hidden" name="redirect_url" value="{{ request.path }}" />
+          <input type="hidden" name="redirect_url" value="{{ request.path }}" >
         </form>
     </td>
     <td data-th="Subtotal">
