--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -3,7 +3,7 @@
 
 
  {% block extra_css %}
-<link rel="stylesheet" href="{% static 'checkout/css/checkout.css' %}" />
+<link rel="stylesheet" href="{% static 'checkout/css/checkout.css' %}">
 {% endblock %} 
 
 {% block page_header %}
@@ -19,9 +19,9 @@
 <div class="container mb-5">
   <div class="row">
     <div class="col">
-      <hr />
+      <hr>
       <h2 class="logo-font mb-4">Thank You</h2>
-      <hr />
+      <hr>
       <p class="text-black">
         Your order information is below. A confirmation email will be sent to
         <strong>{{ order.email }}</strong>.
