--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -26,7 +26,7 @@
             class="card-img-top mb-5 mb-md-0"
             src="{{ product.image.url }}"
             alt="..."
-          />
+          >
           {% if product.sale %}
           <div class="position-absolute " style="top: 0.5rem; right: 0.5rem">
             <p class='h5'><span class="badge bg-success">{{product.sale}}% Sale
@@ -36,7 +36,7 @@
         </div>
         <div class="col-md-6">
           <div class="small mb-1">SKU: {{product.sku}}</div>
-          <h1 class="display-5 fw-bolder">{{product.name}}</h1>
+          <h2 class="display-5 fw-bolder">{{product.name}}</h2>
           <div class="fs-5 mb-5">
             {% if product.sale %}
             <span class="text-decoration-line-through text-danger">${{product.price}}</span>
@@ -60,7 +60,7 @@
                     min="1"
                     max="99"
                     style="max-width: 9rem"
-                />
+                >
                 <button
                     id="submitBtn"
                     class="btn btn-outline-dark flex-shrink-0"
@@ -69,7 +69,7 @@
                     <i class="bi-cart-fill me-1"></i>
                     Add to cart
                 </button>
-                <input type="hidden" name="redirect_url" value="{{ request.path }}" />
+                <input type="hidden" name="redirect_url" value="{{ request.path }}">
                 </div>
             </form>
         </div>
