--- a/programs/templates/includes/program_card.html
+++ b/programs/templates/includes/program_card.html
@@ -1,72 +1,67 @@
 <div class="col">
-    <a class="card program-card shadow border-grey overflow-hidden" href="{% url 'program_detail' program.id %}" alt='Link to {{program.name}}'>
-      <div class="row">
-        <div class="col-lg-4 order-lg-2 bg-dark p-0">
-          <img
-            src="{{ program.image.url }}"
-            class="card-image"
-            alt="Image"
-          />
-        </div>
-        <div class="col-lg-8">
-          <div class="card-body">
-            {% if program.sale %}
-            <h5>
-              <span
-                class="badge bg-success text-white position-absolute"
-                style="top: 0.5rem; right: 0.5rem"
-              >
-                {{program.sale}}% Sale
-              </span>
-            </h5>
-            {% endif %}
-            <h5 class="text-primary fw-bold">
-                {{program.name}}
-            </h5>
-            <p class="card-text text-secondary pb-2 border-bottom">
-              {{program.description}}
-            </p>
-  
-            <div class='px-3'>
+  <a
+    class="card program-card shadow border-grey overflow-hidden"
+    href="{% url 'program_detail' program.id %}"
+    title="Link to {{program.name}}"
+  >
+    <div class="row">
+      <div class="col-lg-4 order-lg-2 bg-dark p-0">
+        <img src="{{ program.image.url }}" class="card-image" alt="{{program.name}} image">
+      </div>
+      <div class="col-lg-8">
+        <div class="card-body">
+          {% if program.sale %}
+          <h5>
+            <span
+              class="badge bg-success text-white position-absolute"
+              style="top: 0.5rem; right: 0.5rem"
+            >
+              {{program.sale}}% Sale
+            </span>
+          </h5>
+          {% endif %}
+          <h5 class="text-primary fw-bold">{{program.name}}</h5>
+          <p class="card-text text-secondary pb-2 border-bottom">
+            {{program.description}}
+          </p>
+
+          <div class="px-3">
             <div class="my-2 d-flex text-secondary justify-content-between">
               <div>
                 <i class="fa-solid fa-star text-warning"></i>
-                <strong class="text-dark "
-                >{{program.rating}}</strong
-              >
-              </div>  
+                <strong class="text-dark">{{program.rating}}</strong>
+              </div>
               <div>
                 {% if program.sale %}
-                <em class="text-danger text-decoration-line-through">${{program.price}}</em>
+                <em class="text-danger text-decoration-line-through"
+                  >${{program.price}}</em
+                >
                 {% endif %}
-  
+
                 <i class="fa-solid fa-dollar-sign text-success"></i>
                 <strong class="text-dark">{{program.total_final_price}}</strong>
-              </div>         
+              </div>
             </div>
-  
+
             <div class="my-2 d-flex text-secondary justify-content-between">
               <div>
                 <i class="fa-solid fa-hourglass-start text-primary"></i>
-                <strong class="text-dark "
-                >{{program.length}}</strong
-              >
-              </div>  
+                <strong class="text-dark">{{program.length}}</strong>
+              </div>
               <div>
                 <i class="fa-solid fa-chart-line text-danger"></i>
                 {% if program.difficulty == 1 %}
-                    <span class="badge bg-success">Beginner</span>
-                    {% elif program.difficulty == 2 %}
-                    <span class="badge bg-warning">Intermediate</span>
-                    {% elif program.difficulty == 3 %}
-                    <span class="badge bg-danger">Expert</span>
-                    {% endif %}
-              </div>         
+                <span class="badge bg-success">Beginner</span>
+                {% elif program.difficulty == 2 %}
+                <span class="badge bg-warning">Intermediate</span>
+                {% elif program.difficulty == 3 %}
+                <span class="badge bg-danger">Expert</span>
+                {% endif %}
+              </div>
             </div>
-          </div>
-            
           </div>
         </div>
       </div>
-    </a>
-  </div>
+    </div>
+  </a>
+</div>
