--- a/programs/templates/programs/programs.html
+++ b/programs/templates/programs/programs.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block extra_css %}
-<link rel="stylesheet" href="{% static 'programs/css/programs.css' %}" />
+<link rel="stylesheet" href="{% static 'programs/css/programs.css' %}">
 {% endblock %}
 
 {% block page_header %}
