--- a/templates/base.html
+++ b/templates/base.html
@@ -3,16 +3,16 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8" >
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
-    <meta name="description" content="" />
-    <meta name="author" content="" />
+    >
+    <meta name="description" content="" >
+    <meta name="author" content="" >
     <title>Ci Swag{% block extra_title %}{% endblock %}</title>
     <!-- Favicon-->
-    <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
 
@@ -104,7 +104,7 @@
 
 
     {% block postloadjs %}
-    <script type="text/javascript">
+    <script>
       $(document).ready(function() {
         $('.toast').toast('show');
     });    </script>
