--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -5,7 +5,7 @@
   <nav class="container sticky-top sticky-nav navbar navbar-expand-lg navbar-light bg-light p-0 ">
     <div class="container-fluid">
       <a class="navbar-brand fw-bolder logo" href="{% url 'home' %}">
-        <img src="{% static 'images/logo.png' %}" alt="code institute swag logo" class="" />
+        <img src="{% static 'images/logo.png' %}" alt="code institute swag logo">
       </a>
       <button
         class="navbar-toggler"
@@ -27,7 +27,7 @@
             </a>
             <ul class="dropdown-menu" aria-labelledby="productDropdown">
               <li><a class="dropdown-item" href="{% url 'products' %}">All</a></li>
-              <li><hr class="dropdown-divider" /></li>
+              <li><hr class="dropdown-divider"></li>
               <li>
                 <a class="dropdown-item" href="{% url 'products' %}?category=clothing">Clothing</a>
               </li>
@@ -47,7 +47,7 @@
             </a>
             <ul class="dropdown-menu" aria-labelledby="courseDropdown">
               <li><a class="dropdown-item" href="{% url 'programs' %}">All</a></li>
-              <li><hr class="dropdown-divider" /></li>
+              <li><hr class="dropdown-divider"></li>
               <li>
                 <a class="dropdown-item" href="{% url 'programs' %}?category=fullstack">Full-Stack</a>
               </li>
@@ -106,14 +106,14 @@
                       <a class="dropdown-item" href="{% url 'my_courses' %}">My Courses</a>
                     </li>
     
-                    <li><hr class="dropdown-divider" /></li>
+                    <li><hr class="dropdown-divider"></li>
     
                     <li>
                       <a class="dropdown-item" href="{% url 'account_logout' %}">Logout</a>
                     </li>
                     
                     {% else %}
-                    <li><hr class="dropdown-divider" /></li>
+                    <li><hr class="dropdown-divider"></li>
                     <li>
                       <a class="dropdown-item" href="{% url 'account_signup' %}">Register</a>
                     </li>
@@ -134,7 +134,6 @@
                       </span>
                       {% endif %}
                     </i>
-                    </span>
                   </a>
                 </li>
             
