--- a/templates/base.html
+++ b/templates/base.html
@@ -98,7 +98,7 @@
               </div>
             </div>
             <div class="col-auto">
-              <a class="link-light small" href="#">Privacy</a>
+              <a class="link-light small" href="{% url "privacy" %}">Privacy</a>
               <span class="text-white mx-1">&middot;</span>
               <a class="link-light small" href="#">About Us</a>
             </div>
