--- a/templates/base.html
+++ b/templates/base.html
@@ -88,22 +88,53 @@
      
     <!-- Footer-->
     <footer class="bg-dark py-4 mt-auto">
-        <div class="container">
-          <div
-            class="row align-items-center justify-content-between flex-column flex-sm-row"
-          >
-            <div class="col-auto">
-              <div class="small m-0 text-white">
-                Copyright &copy; Your Website 2024
-              </div>
+      <div class="container">
+        <div
+          class="row align-items-center justify-content-between flex-column flex-sm-row"
+        >
+          <div class="col-auto">
+            <div class="small m-0 text-white">
+              Copyright &copy; Your CiSwag 2024
             </div>
-            <div class="col-auto">
-              <a class="link-light small" href="{% url "privacy" %}">Privacy</a>
+            <div>
+              <a class="link-light small" href="#">Privacy</a>
               <span class="text-white mx-1">&middot;</span>
-              <a class="link-light small" href="#">About Us</a>
+              <a class="small" href="mailto:ciswag@gmail.com">Contact Us</a>
             </div>
           </div>
+          <div class="col-auto">
+            <a
+                  class="btn btn-outline-light m-1"
+                  href="mailto:darrachb1991@gmail.com"
+                  role="button"
+                  aria-label="Email the developer"
+
+                  >
+                  <i class="fa fa-envelope"></i>
+              </a>
+
+              <a
+              class="btn btn-outline-light m-1"
+              href="https://www.facebook.com/"
+              role="button"
+              target="_blank"
+              aria-label="Link to our Facebook"
+
+              ><i class="fab fa-facebook-f"></i
+            ></a>
+
+            <a
+            class="btn btn-outline-light m-1"
+            href="https://github.com/DarrachBarneveld"
+            role="button"
+            target="_blank"
+            aria-label="Link to our Github"
+            ><i class="fab fa-github"></i
+          ></a>
+  
+          </div>
         </div>
+      </div>
     </footer>
 
 
