--- a/home/templates/home/privacy.html
+++ b/home/templates/home/privacy.html
@@ -9,8 +9,8 @@
     <div class="container">
       <div class="row align-items-center justify-content-center">
         <div class="col-lg-8 col-xl-7 col-xxl-6">
-          <div class="my-3 text-center text-xl-start">
-            <h1 class="display-5 fw-bolder text-white mb-2">Priacy Policy</h1>
+          <div class="my-3 text-center">
+            <h1 class="display-5 fw-bolder text-white mb-2">Privacy Policy</h1>
             <p class="lead fw-normal text-white-50 mb-4">
                 We care about privacy, and will never share your data.
             </p>
