Improve UX styling and semantic markup #6

--- a/products/templates/includes/product_card.html
+++ b/products/templates/includes/product_card.html
@@ -1,5 +1,5 @@
 <div class="col px-1 mb-3">
-    <div class="card h-100 border-grey shadow">
+    <article class="card h-100 border-grey shadow">
       <!-- Sale badge-->
       {% if product.sale %}
       <div class="badge bg-success text-white position-absolute" style="top: 0.5rem; right: 0.5rem">
@@ -47,5 +47,5 @@
           >View Product</a
         >
       </div>
-    </div>
+    </article>
 </div>
