--- a/programs/templates/programs/programs.html
+++ b/programs/templates/programs/programs.html
@@ -54,7 +54,7 @@
         
       <div class="container px-4 px-lg-5 mt-5">
           <div
-            class="row gx-2 gy-2 row-cols-lg-2 justify-content-center"
+            class="row row-cols-lg-2 g-3"
           >
           {% for program in programs  %}
 
