--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -48,25 +48,28 @@
                           Changing username/email will only affect this order
                         </p>
                         <div class="mb-3">
-                            <div>
-                              <div class="row">
-                                <div class="col-lg-4">
-                                  <div class="mb-3">
-                                    {{ order_form.full_name | as_crispy_field }}
-                                  </div>
-                                </div>
-                                <div class="col-lg-4">
-                                  <div class="mb-3">
-                                    {{ order_form.email | as_crispy_field }}
-                                  </div>
-                                </div>
-                                <div class="col-lg-4">
-                                  <div class="mb-3">
-                                    {{ order_form.phone_number | as_crispy_field }}
-                                  </div>
+                          <div>
+                            <div class="row">
+                              <div class="col-lg-4">
+                                <div class="mb-3">
+                                  {{ order_form.full_name | as_crispy_field }}
                                 </div>
                               </div>
+                              <div class="col-lg-4">
+                                <div class="mb-3">
+                                  {{ order_form.email | as_crispy_field }}
+                                </div>
+                              </div>
+                              <div class="col-lg-4">
+                                <div class="mb-3">
+                                  {{ order_form.phone_number | as_crispy_field }}
+                                  <small class='text-muted'>*Include country code</small>  
+                                  <small><em class='text-muted'>(+353875555555)</em></small>
+                                </div>
+
+                              </div>
                             </div>
+                          </div>
                         </div>
                       </div>
                     </div>
@@ -79,29 +82,41 @@
                     </div>
                     <div class="feed-item-list mb-3">
                       {{ order_form.street_address1 | as_crispy_field }}
-
+      
                       {{ order_form.street_address2 | as_crispy_field }}
-
+      
                       {{ order_form.town_or_city | as_crispy_field }}
-
+      
                       {{ order_form.county | as_crispy_field }}
-
+      
                       {{ order_form.postcode | as_crispy_field }}
-
+      
                       {{ order_form.country | as_crispy_field }}
-
-                      <div
-                        class="form-check form-check-inline float-right mt-3"
-                      >
-                      {% if user.is_authenticated %}
-                      <label class="form-check-label" for="id-save-info">Save this delivery information to my profile</label>
-                       <input class="form-check-input ml-2 mr-0" type="checkbox" id="id-save-info" name="save-info" checked>
-                    {% else %}
-                      <label class="form-check-label" for="id-save-info">
-                       <a class="text-info" href="{% url 'account_signup' %}">Create an account</a> or 
-                      <a class="text-info" href="{% url 'account_login' %}">login</a> to save this information
-                      </label>
-                    {% endif %}
+      
+                      <div class="form-check form-check-inline float-right mt-3">
+                        {% if user.is_authenticated %}
+                        <label class="form-check-label" for="id-save-info"
+                          >Save this delivery information to my profile</label
+                        >
+                        <input
+                          class="form-check-input ml-2 mr-0"
+                          type="checkbox"
+                          id="id-save-info"
+                          name="save-info"
+                          checked
+                        />
+                        {% else %}
+                        <label class="form-check-label" for="id-save-info">
+                          <a class="text-info" href="{% url 'account_signup' %}"
+                            >Create an account</a
+                          >
+                          or
+                          <a class="text-info" href="{% url 'account_login' %}"
+                            >login</a
+                          >
+                          to save this information
+                        </label>
+                        {% endif %}
                       </div>
                     </div>
                   </li>
@@ -120,81 +135,95 @@
                       </div>
                     </div>
                     <fieldset class="px-3">
-                      <legend class="fieldset-label small text-black px-2 w-auto">Payment</legend>
+                      <legend class="fieldset-label small text-black px-2 w-auto">
+                        Payment
+                      </legend>
                       <!-- A Stripe card element will go here -->
                       <div class="mb-3" id="card-element"></div>
                       <!-- Used to display form errors -->
-                      <div class="mb-3 text-danger" id="card-errors" role="alert"></div>
+                      <div
+                        class="mb-3 text-danger"
+                        id="card-errors"
+                        role="alert"
+                      ></div>
                       <!-- Pass the client secret to the view so we can get the payment intent id -->
-                      <input type="hidden" value="{{ client_secret }}" name="client_secret">
-                  </fieldset>
-           
+                      <input
+                        type="hidden"
+                        value="{{ client_secret }}"
+                        name="client_secret"
+                      />
+                    </fieldset>
                   </li>
                 </ol>
                 <div class="row my-4">
                   <div class="col">
-                    <a href={% url "products" %}>
-                      <i class="fas fa-arrow-left mr-2"></i> Continue Shopping</a
-                    >
+                    <a href="#">
+                      <i class="fas fa-arrow-left mr-2"></i> Continue Shopping
+                    </a>
                   </div>
                   <div class="col">
                     <div class="text-end mt-2 mt-sm-0">
-                      <button type='submit' class="btn btn-success">
-                         Pay Now
-                      </button>
+                      <button type="submit" class="btn btn-success">Pay Now</button>
                     </div>
                   </div>
                 </div>
               </form>
             </div>
           </div>
-
-    
+        </div>
         <div class="col-xl-4">
           <div class="card checkout-order-summary">
             <div class="card-body">
               <div class="p-3 bg-light mb-3">
                 <h5 class="font-size-16 mb-0">
-                  Order Summary <span class="float-end ms-2">({{ product_count }})</span>
+                  Order Summary
+                  <span class="float-end ms-2">({{ product_count }})</span>
                 </h5>
               </div>
               {% for item in cart_items %}
-
+      
               <div class="card border-0 my-2">
                 <div class="row">
                   <div class="col-3 p-0">
                     {% if item.product.image.url %}
-                    <img class="avatar-lg"  src="{{item.product.image.url}}" alt='{{item.product.name}} product photo' style='object-fit: cover;' >
-                    {% else %}
-                    <img class="avatar-lg bg-{{item.product.color}}"   alt='{{item.product.name}} product photo'  src="{% static "images/award-placeholder.webp" %}" style='object-fit: cover;' >
+                    <img
+                      class="avatar-lg"
+                      src="{{item.product.image.url}}"
+                      alt="{{item.product.name}} product photo"
+                      style="object-fit: cover"
+                    />
+                    {% else %} <img class="avatar-lg bg-{{item.product.color}}"
+                    alt='{{item.product.name}} product photo' 
+                    src="{% static "images/award-placeholder.webp" %}" style='object-fit: cover;' >
                     {% endif %}
                   </div>
                   <div class="col-6">
                     <div class="row d-flex">
-                      <p class='small'>{{ item.product.name }}
-                      </p>
+                      <p class="small">{{ item.product.name }}</p>
                     </div>
                     <div class="row d-flex">
                       <p class="text-muted small">Quantity {{item.quantity}}</p>
                     </div>
                   </div>
                   <div class="col-3 d-flex justify-content-end">
-                    <p class='fw-bold'>
+                    <p class="fw-bold">
                       {% if item.product.discount %}
-                      <span class='text-decoration-line-through text-danger'>${{ item.product.price | calc_subtotal:item.quantity }}</span>
-                      {% endif %}
-                      ${{ item.product.total_final_price | calc_subtotal:item.quantity }}</p>
-
-                      
+                      <span class="text-decoration-line-through text-danger"
+                        >${{ item.product.price | calc_subtotal:item.quantity }}</span
+                      >
+                      {% endif %} 
+                      ${{ item.product.total_final_price | calc_subtotal:item.quantity }}
+                    </p>
                   </div>
                 </div>
                 {% endfor %}
-
-
-                <hr >
+      
+                <hr />
                 <div class="row mb-2">
                   <div class="col"><b> Shipping/Admin Charge:</b></div>
-                  <div class="col-auto d-flex justify-content-end"><b>${{ delivery_cost|floatformat:2 }}</b></div>
+                  <div class="col-auto d-flex justify-content-end">
+                    <b>${{ delivery_cost|floatformat:2 }}</b>
+                  </div>
                 </div>
                 <div class="row mb-2">
                   <div class="col"><b>Member Discounts:</b></div>
@@ -204,15 +233,17 @@
                 </div>
                 <div class="row mb-2">
                   <div class="col"><b> Total:</b></div>
-                  <div class="col-auto d-flex justify-content-end"><b>${{ total | floatformat:2 }}</b></div>
+                  <div class="col-auto d-flex justify-content-end">
+                    <b>${{ total | floatformat:2 }}</b>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
         </div>
       </div>
-      </div>
-    </div>
+      
+     
   </section>
 
   <div id="loading-overlay">
