--- a/profiles/templates/includes/confirm_modal.html
+++ b/profiles/templates/includes/confirm_modal.html
@@ -6,7 +6,7 @@
  aria-labelledby="subscriptionModalLabel"
  aria-hidden="true"
 >
- <div class="modal-dialog">
+ <dialog class="modal-dialog">
    <div class="modal-content">
      <div class="modal-header">
        <h5 class="modal-title" id="subscriptionModalLabel">Remove Your Membership</h5>
@@ -36,5 +36,5 @@
        </form>
      </div>
    </div>
- </div>
+ </dialog>
 </div>
