--- a/programs/templates/includes/program_card.html
+++ b/programs/templates/includes/program_card.html
@@ -1,27 +1,25 @@
-<div class="col">
+<div class="">
   <a
     class="card program-card shadow border-grey overflow-hidden"
     href="{% url 'program_detail' program.id %}"
     title="Link to {{program.name}}"
   >
-    <div class="row">
+    <article class="row">
       <div class="col-lg-4 order-lg-2 bg-dark p-0">
         <img src="{{ program.image.url }}" class="card-image" alt="{{program.name}} image">
       </div>
       <div class="col-lg-8">
         <div class="card-body">
           {% if program.sale %}
-          <h5>
             <span
               class="badge bg-success text-white position-absolute"
-              style="top: 0.5rem; right: 0.5rem"
+              style="top: 0.5rem; right: 0.5rem; font-size: .9rem;"
             >
               {{program.sale}}% Sale
             </span>
-          </h5>
           {% endif %}
-          <h5 class="text-primary fw-bold">{{program.name}}</h5>
-          <p class="card-text text-secondary pb-2 border-bottom">
+          <h5 class="text-primary fw-bold title border-bottom p-0 mb-1">{{program.name}}</h5>
+          <p class="text-secondary p-2 border-bottom">
             {{program.description}}
           </p>
 
@@ -62,6 +60,6 @@
           </div>
         </div>
       </div>
-    </div>
+    </article>
   </a>
 </div>
