--- a/templates/includes/searchbar.html
+++ b/templates/includes/searchbar.html
@@ -5,6 +5,7 @@
     </div>
     
     <button type="submit" class='btn btn-outline-dark align-items-center d-flex justify-content-center' name="sort" value="price">
+        <small class='text-muted me-1'>Price</small> 
         <i class="fa-solid fa-money-bill text-success"></i>
         {% if sort == 'price' %}
             {% if direction == 'asc' %}
@@ -18,7 +19,8 @@
     </button>
 
     <button type="submit" class='text-center btn btn-outline-dark align-items-center d-flex justify-content-center' name="sort" value="rating">
-      <i class="fa-solid fa-star text-warning"></i>
+        <small class='text-muted me-1'>Rating</small>
+        <i class="fa-solid fa-star text-warning"></i>
       {% if sort == 'rating' %}
           {% if direction == 'asc' %}
               <i class="fa-solid fa-sort-down ms-2"></i>
@@ -32,6 +34,7 @@
     </button>
 
     <button type="submit" class='btn btn-outline-dark align-items-center d-flex justify-content-center' name="sort" value="sale">
+    <small class='text-muted me-1'>Sale</small> 
       <i class="fa-solid fa-tags text-danger"></i>
     </button>
 
