--- a/templates/base.html
+++ b/templates/base.html
@@ -93,13 +93,13 @@
           class="row align-items-center justify-content-between flex-column flex-sm-row"
         >
           <div class="col-auto">
-            <div class="small m-0 text-white">
+            <div class="small m-0 text-white mb-2">
               Copyright &copy; Your CiSwag 2024
             </div>
             <div>
               <a class="link-light small" href="#">Privacy</a>
               <span class="text-white mx-1">&middot;</span>
-              <a class="small" href="mailto:ciswag@gmail.com">Contact Us</a>
+              <a class="link-light small" href="mailto:ciswag@gmail.com">Contact Us</a>
             </div>
           </div>
           <div class="col-auto">
