--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -24,7 +24,7 @@
               class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xl-start"
             >
               <a
-                class="btn bg-orange btn-lg px-4 me-sm-3 text-white"
+                class="btn bg-orange btn-lg px-4 me-sm-3 text-white fw-bold"
                 href="{% url 'products' %}"
                 >Shop Now</a
               >
@@ -117,28 +117,28 @@
           <div class="col-lg-3 col-md-6 col-sm-6">
             <div class="text-center p-3 card">
               <i class="fa-solid fa-truck h1 text-primary"></i>
-              <h6>Free Delivery / Admin Charges</h6>
+              <h2 class='h6'>Free Delivery / Admin Charges</h2>
               <p>On all member orders</p>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 col-sm-6">
             <div class="text-center p-3 card">
               <i class="fa-solid fa-rotate-left h1 text-danger"></i>
-              <h6>Return Policy</h6>
+              <h2 class='h6'>Return Policy</h2>
               <p>Free Shipping on all order</p>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 col-sm-6">
             <div class="text-center p-3 card">
               <i class="fa-solid fa-headset h1 text-success"></i>
-              <h6>24/7 Support</h6>
+              <h2 class='h6'>24/7 Support</h2>
               <p>Free Shipping on all order</p>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 col-sm-6">
             <div class="text-center p-3 card">
               <i class="fa-regular fa-credit-card h1"></i>
-              <h6>Secure Payment</h6>
+              <h2 class='h6'>Secure Payment</h2>
               <p>Free Shipping on all order</p>
             </div>
           </div>
