Improved accessbility of search bar #6

--- a/programs/templates/includes/program_card.html
+++ b/programs/templates/includes/program_card.html
@@ -51,7 +51,7 @@
                 {% if program.difficulty == 1 %}
                 <span class="badge bg-success">Beginner</span>
                 {% elif program.difficulty == 2 %}
-                <span class="badge bg-warning">Intermediate</span>
+                <span class="badge text-dark bg-warning">Intermediate</span>
                 {% elif program.difficulty == 3 %}
                 <span class="badge bg-danger">Expert</span>
                 {% endif %}
