--- a/products/templates/includes/product_card.html
+++ b/products/templates/includes/product_card.html
@@ -14,7 +14,7 @@
       <div class="card-body p-2">
         <div class="text-center">
           <!-- Product name-->
-          <h5 class="fw-bolder">{{product.name}}</h5>
+          <h2 class="fw-bolder h5">{{product.name}}</h2>
           <!-- Product reviews-->
           <div
             class="d-flex justify-content-center small text-warning mb-2"
